Comm Terms language updated

--- a/commterms.html
+++ b/commterms.html
@@ -40,7 +40,9 @@
                         <div align=center><h2>General Terms</h2></div>
                         <ul>
                         <li>By purchasing a commission, you automatically agree to these terms of service. Failure to follow these terms can result in an early termination and refund of your commission, and/or blacklisting.</li>
+                        <li>TGI Studios reserves the right to decline commissions for any reason.</li>
                         <li>These commissions are for <b>personal use only.</b> For commercial fees, please email ewgallahan@gmail.com.</li>
+                        <li>Commissions are guaranteed for delivery within 6 month of payment, unless a different timeline is agreed on. Rush orders may have additional fees.</li>
                         <li>These terms ONLY apply to personal commissions and smaller projects. For larger projects, individual contracts will be made and upheld.</li></ul>
                         <div align=center><h2>Content</h2></div>
                         <ul>
@@ -50,7 +52,7 @@
                         <ul>
                         <li>Commissioners/Clients are free to use their artwork as they please as long as it in a non-commercial matter.</li>
                         <li>Using commission work in physical products or merchandise is NOT ALLOWED. That is a commercial purchase and will need to be discussed with TGIstudios beforehand.</li>
-                        <li>Clients may use their commission in individual physical products as long as they are not selling or distributing them without permission. (i.e. creating a popsocket with their image, or making stickers for their own personal use)</li>
+                        <li>Clients may use their commission in individual physical products for personal use only. (i.e. creating a popsocket with their image, or making stickers for their own personal use)</li>
                         <li>Clients may get their commission professionally printed as long as they are not selling the prints for profit. Distributing to their friends is fine.</li></ul>
                         <div align=center><h2>Payment</h2></div>
                         <ul>
@@ -61,7 +63,7 @@
                         </ul>
                         <div align=center><h3>Refunds</h3></div>
                         <ul>
-                        <li>Refunds will only be issued under extreme circumstances, or if a client fails to follow the terms of service.</li>
+                        <li>Refunds will only be issued under extreme circumstances. If a client fails to uphold the terms of service and the commission is cancelled, refunds will be based on the portion of work completed.</li>
                         <li>Refunds will only be issued if TGI Studios fails to deliver within six months of the initial purchase, unless the timing of the commission was previously discussed.</li>
                         <li>If you feel you need a refund before the time limit for any reason, please email tgicomms@gmail.com and a discussion can be had.</li></ul>
 					</section>
