--- a/Backups/comm4319.html
+++ b/Backups/comm4319.html
@@ -18,12 +18,12 @@
 				<div class="inner">
 					<a href="index.html" class="avatar"><img src="images/logowip%20wipwhitetransp.png" alt="" align="" width="150" /></a>
                     <p></p>
-					<h1>Art by Tudy Gallahan</h1>
+					<h1>Art by TJ Gallahan</h1>
                     <p></p>
                     <p><a href="portfolio.html" class=button>Portfolio</a></p>
                     <p><a href="comm.html" class=button>Commissions</a>
                     <p><a href="resume.html" class=button>Resume</a>
-                    <p><a href="http://tgistudios.storenvy.com/" class=button>Shop</a>
+                    <p><a href="http://tgistudio.com/" class=button>Shop</a>
                     
 				</div>
 			</header>
@@ -466,7 +466,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<section>
 							<h4>Form</h4>
 							<form method="post" action="https://formspree.io/tgicomms@gmail.com">
-                            <input type="hidden" name="_next" value="tudygallahan.com/thankyou.html" />
+                            <input type="hidden" name="_next" value="TJgallahan.com/thankyou.html" />
 								<div class="row gtr-uniform gtr-50">
 									<div class="col-6 col-12-xsmall">
 										<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
@@ -548,7 +548,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="https://twitter.com/Tegallaha" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="http://tgistudios.storenvy.com/" class="icon fa-shopping-cart"><span class="label">Storenvy</span></a></li>
+						<li><a href="http://tgistudio.com/" class="icon fa-shopping-cart"><span class="label">Storenvy</span></a></li>
 						<li><a href="http://tg-i.tumblr.com/" class="icon fa-tumblr-square"><span class="label">Tumblr</span></a></li>
 						<li><a href="mailto:ewgallahan@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
