--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
 						<h2>Resume</h2>
 						<div class="row">
 							<article class="col-21 col-12-xsmall work-item">
-								<align=center><iframe src="https://drive.google.com/file/d/1MY24OiPVlj5v4VTnVVqWrzaFO-uYyVpC/preview" width="928" height="960"></iframe></align>
+								<align=center><iframe src="https://docs.google.com/document/d/e/2PACX-1vT5sASx7BpcpiZommzmLwXbrKwaDi_V9cs4HHU4cMxw8slos6QDsrWHR7t2HODBVsbUlhKSNJfBr6E0/pub?embedded=true" width="928" height="960"></iframe></align>
 							</article>
 						</div>
 					</section>
