--- a/Illustration.html
+++ b/Illustration.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="avatar"><img src="images/logowip%20wipwhitetransp.png" alt="" align="" width="150" /></a>
+					<a href="index.html" class="avatar"><img src="images/TGiLOGO.png" alt="" align="" width="150" /></a>
                     <p></p>
 					<h1>Art by TJ Gallahan</h1>
                     <p></p>
