Lots of Updates
Complete overhaul of the illustration section. Removed Graphic Design and Blog sections.

>Concept Work removed.
>Sections in Illustration seperated into "Painted, Inked, and Vector" sections.
>Homeland removed.
>Tinies Added
>Vector work added

A few pages were renamed or removed entirely.

--- a/Illustration.html
+++ b/Illustration.html
@@ -36,25 +36,26 @@
 					<section id="two">
 						<h1>Illustration and Concept Work</h1>
 						<div class="row">
+
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/Port_IllGravy.html"><img class="image fit thumb" src="images/thumbs/Thumb_Gravy.jpg" alt="" />
-								<h2><i>Gravy Train</i> Concepts</h2></a>
-								<p>Concepts for the AirConsole title <i>Gravy Train</i>.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="/Port_IllHomeland.html"><img class="image fit thumb" src="images/thumbs/Thumb_Homeland.jpg" alt="" />
-								<h2>Homeland</h2></a>
-								<p>Book Cover and Character designs for a book.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="/Port_IllComm.html"><img class="image fit thumb" src="images/thumbs/Thumb_Comms.jpg" alt="" />
-								<h2>Commission Work</h2></a>
-								<p>A collection of personal commission work.</p>
+								<a href="/Port_IllVector.html"><img class="image fit thumb" src="images/thumbs/Thumb_Comms.jpg" alt="" />
+								<h2>Inked Illustrations</h2></a>
+								<p>A collection of illustrations made using an ink brush.</p>
 							</article>
                             <article class="col-6 col-12-xsmall work-item">
-								<a href="/Port_Illus.html"><img class="image fit thumb" src="images/thumbs/Thumb_Illus.jpg" alt="" />
-								<h2>Illustrations</h2></a>
-								<p>A collection of personal illustrations.</p>
+								<a href="/Port_Illus.html"><img class="image fit thumb" src="images/thumbs/Thumb_Painted.jpg" alt="" />
+								<h2>Painted Illustrations</h2></a>
+								<p>A collection of "painted" illustrations.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="/Port_IllVector.html"><img class="image fit thumb" src="images/thumbs/Thumb_Illus.jpg" alt="" />
+								<h2>Vector Illustrations</h2></a>
+								<p>A collection of work created using the pen tool in Adobe Illustrator.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="/Port_IllTinies.html"><img class="image fit thumb" src="images/thumbs/Thumb_Tinies.jpg" alt="" />
+								<h2>Tinies</h2></a>
+								<p>Cute tiny vector chibis!</p>
 							</article>
                             <article class="col-6 col-12-xsmall work-item">
 								<a href="/Port_EverythingDies.html"><img class="image fit thumb" src="images/everythingwide.jpg" alt="" />
@@ -62,10 +63,11 @@
 								<p>10 page Zine about life and death.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/Port_IllConcept.html"><img class="image fit thumb" src="images/thumbs/Thumb_Pup.jpg" alt="" />
-								<h2>Concept Work</h2></a>
-								<p>Various personal concept work.</p>
+								<a href="/Port_IllGravy.html"><img class="image fit thumb" src="images/thumbs/Thumb_Gravy.jpg" alt="" />
+								<h2><i>Gravy Train</i> Concepts</h2></a>
+								<p>Concepts for the AirConsole title <i>Gravy Train</i>.</p>
 							</article>
+
 						</div>
 					</section>
 
