--- a/Port_Illus.html
+++ b/Port_Illus.html
@@ -34,25 +34,28 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Illustrations</h2>
-                        <p>Various personal illustrations.</p>
+						<h2>Painted Illustrations</h2>
+                        <p>Various painted illustrations, both personal and commissions.</p>
 						<div class="row">
                             <article class="col-21 col-12-xsmall work-item">
 								<a href="images/illustration/Clover1.jpg" class="image fit"><img src="images/illustration/Clover1.jpg" alt="Clover" /></a>
 								<p>"Clover"</p>
 							</article>
                             <article class="col-21 col-12-xsmall work-item">
-								<a href="images/illustration/Clover2.jpg" class="image fit"><img src="images/illustration/Clover2.jpg" alt="Clover (Close)" /></a>
-							</article>
-                            <article class="col-21 col-12-xsmall work-item">
 								<a href="images/illustration/TirnanogLarge.jpg" class="image fit"><img src="images/illustration/TirnanogLarge.jpg" alt="Clover (Close)" /></a>
 								<p>"Tir Na Nog"</p>
 							</article>
-                            <article class="col-21 col-12-xsmall work-item">
-								<a href="images/illustration/tirnaclose1.jpg" class="image fit"><img src="images/illustration/tirnaclose1.jpg" alt="Clover (Close)" /></a>
+							<article class="col-21 col-12-xsmall work-item">
+								<a href="images/Comms/cam2.jpg" class="image fit"><img src="images/Comms/cam2.jpg" alt="" /></a>
+								<p>Oda Cam, a character from the Dystopia Rising national LARP.</p>
 							</article>
                             <article class="col-21 col-12-xsmall work-item">
-								<a href="images/illustration/tirnaclose2.jpg" class="image fit"><img src="images/illustration/tirnaclose2.jpg" alt="Clover (Close)" /></a>
+								<a href="images/Comms/sharkfull4.jpg" class="image fit"><img src="images/Comms/sharkfull4.jpg" alt="" /></a>
+								<p>Shark Character for a sci-fi tabletop setting for a client's unannounced project.</p>
+							</article>
+                            <article class="col-21 col-12-xsmall work-item">
+								<a href="images/Comms/sukra2.jpg" class="image fit"><img src="images/Comms/sukra2.jpg" alt="" /></a>
+								<p>Sukra, a character from the Dystopia Rising national LARP.</p>
 							</article>
 						</div>
 					</section>
