--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <header class="major">
                         <h2>Art by TGI</h2>
                         </header>
-                    	<p>Illustrator, Concept Artist, 3D Artist... Generalist! Looking to add a whimsical flair to your project? Well look no further!</p>
+                    	<p>Howdy! I'm TJ, an illustrator located in the Richmond, VA area. I love creating fun, goofy things. Feel free to check out my work below!</p>
                         <h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
