Last couple Updates for now
>Removed "Business" email - consolidate into one email
>Replaced with Artstation link across all pages
>UPDATED FRONT PAGE
>Slight portfolio tweaks to finish it

--- a/index.html
+++ b/index.html
@@ -40,24 +40,24 @@
                         <h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/Port_IllComm.html" class="image fit thumb"><img src="images/CamThumb.jpg" alt="" /></a>
-								<h3>Oda Cam</h3>
-								<p>Fullbody Commission for a client's LARP character.</p>
+								<a href="/Port_IllPersonal.html" class="image fit thumb"><img src="images/thumbs/Thumb_Comms.jpg" alt="" /></a>
+								<h3>Bigfoot Woods</h3>
+								<p>A bigfoot in da woods...</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/Port_IllComm.html" class="image fit thumb"><img src="images/SharkThumb.jpg" alt="" /></a>
-								<h3>Shark Lady Concept</h3>
-								<p>Concept Art commission for a sci-fi fantasy based RPG.</p>
+								<a href="/Port_IllVector.html" class="image fit thumb"><img src="images/thumbs/PThumb_Illus.jpg" alt="" /></a>
+								<h3>Dagoth Ur 'n Friends</h3>
+								<p>Dagoth Ur and his buddies from red mountain! (Morrowind Fanart)</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/Port_EverythingDies.html" class="image fit thumb"><img src="images/everythingwide.jpg" alt="" /></a>
-								<h3>Everything Dies</h3>
-								<p>10 page zine about the beauty of the circle of life. Read the full comic here.</p>
+								<a href="/Port_IllVector.html" class="image fit thumb"><img src="images/thumbs/Thumb_Illus.jpg" alt="" /></a>
+								<h3>Melody!</h3>
+								<p>Melody and her Ownow buddy! (Neopets fanart)</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/Port_IllGravy.html" class="image fit thumb"><img src="images/GravyThumb.jpg" alt="" /></a>
-								<h3>Gravy Train Concepts</h3>
-								<p>Concept Work for the Airtrain title "GravyTrain".</p>
+								<a href="/Port_IllTinies.html" class="image fit thumb"><img src="images/thumbs/Thumb_Tinies.jpg" alt="" /></a>
+								<h3>Smudge Tiny</h3>
+								<p>A little tiny chibi of Smudge! (A friend's character)</p>
 							</article>
 						</div>
 						<ul class="actions">
@@ -77,16 +77,16 @@
                                         tgiart</a>
 									</li>
 									<li>
-										<a href="https://twitter.com/Tegallaha"><h3 class="icon fa-twitter"><span class="label">Twitter</span></h3>
-                                        @Tegallaha</a>
+										<a href="https://twitter.com/tjgallaha"><h3 class="icon fa-twitter"><span class="label">Twitter</span></h3>
+                                        @tjgallaha</a>
 									</li>
                                     <li>
 										<a href="https://www.instagram.com/dumbelfson/"><h3 class="icon fa-instagram"><span class="label">Instagram</span></h3>
                                         @dumbelfson</a>
 									</li>
 									<li>
-										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="mailto:ewgallahan@gmail.com">ewgallahan@gmailcom</a> (Business Inquiries Only)
+										<a href="https://www.artstation.com/TJgallahan"><h3 class="icon fa-paint-brush"><span class="label">Artstation</span></h3>
+										Artstation</a>
 									</li>
 								</ul>
 							</div>
@@ -109,15 +109,6 @@
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
 										<a href="mailto:tgicomms@gmail.com">tgicomms@gmail.com</a> (Personal Commissions)
 									</li>
-								</ul>
-							</div>
-                            <div class="col-4 col-4-small">
-								<ul class="labeled-icons">
-                                   <li>
-										<a href="https://www.artstation.com/TJgallahan"><h3 class="icon fa-paint-brush"><span class="label">Artstation</span></h3>
-                                        Artstation</a>
-									</li>
-                                    
 								</ul>
 							</div>
 						</div>
@@ -447,7 +438,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://twitter.com/Tegallaha" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/tjgallaha" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="http://tgistudio.com/" class="icon fa-shopping-cart"><span class="label">Storenvy</span></a></li>
 						<li><a href="http://tg-i.tumblr.com/" class="icon fa-tumblr-square"><span class="label">Tumblr</span></a></li>
 						<li><a href="mailto:ewgallahan@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
