--- a/comm.html
+++ b/comm.html
@@ -372,7 +372,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                 <footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://twitter.com/Tegallaha" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/tjgallaha" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="http://tgistudio.com/" class="icon fa-shopping-cart"><span class="label">Storenvy</span></a></li>
 						<li><a href="http://tg-i.tumblr.com/" class="icon fa-tumblr-square"><span class="label">Tumblr</span></a></li>
 						<li><a href="mailto:ewgallahan@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
