--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,8 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="/Illustration.html"><img  class="image fit thumb" src="images/thumbs/PThumb_Illus.jpg" alt="" /></a>
-								<h2>Concept and Illustration Work</h2>
-								<p>A combination of different 2D projects.</p>
+								<h2>Illustration Work</h2>
+								<p>A collection of 2D projects.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
                                 <a href="/3Dart.html"><img class="image fit thumb" src="images/thumbs/PThumb_3D.jpg" alt="" /></a>
@@ -61,16 +61,16 @@
                                         tgiart</a>
 									</li>
 									<li>
-										<a href="https://twitter.com/Tegallaha"><h3 class="icon fa-twitter"><span class="label">Twitter</span></h3>
-                                        @Tegallaha</a>
+										<a href="https://twitter.com/tjgallaha"><h3 class="icon fa-twitter"><span class="label">Twitter</span></h3>
+                                        @tjgallaha</a>
 									</li>
                                     <li>
 										<a href="https://www.instagram.com/dumbelfson/"><h3 class="icon fa-instagram"><span class="label">Instagram</span></h3>
                                         @dumbelfson</a>
 									</li>
 									<li>
-										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="mailto:ewgallahan@gmail.com">ewgallahan@gmailcom</a> (Business Inquiries Only)
+										<a href="https://www.artstation.com/TJgallahan"><h3 class="icon fa-paint-brush"><span class="label">Artstation</span></h3>
+										Artstation</a>
 									</li>
 								</ul>
 							</div>
@@ -95,15 +95,7 @@
 									</li>
 								</ul>
 							</div>
-                            <div class="col-4 col-4-small">
-								<ul class="labeled-icons">
-                                   <li>
-										<a href="https://www.artstation.com/TJgallahan"><h3 class="icon fa-paint-brush"><span class="label">Artstation</span></h3>
-                                        Artstation</a>
-									</li>
-                                    
-								</ul>
-							</div>
+
 						</div>
 					</section>
 
@@ -431,7 +423,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                 <footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://twitter.com/Tegallaha" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/tjgallaha" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="http://tgistudio.com/" class="icon fa-shopping-cart"><span class="label">Storenvy</span></a></li>
 						<li><a href="http://tg-i.tumblr.com/" class="icon fa-tumblr-square"><span class="label">Tumblr</span></a></li>
 						<li><a href="mailto:ewgallahan@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
