--- a/Illustration.html
+++ b/Illustration.html
@@ -38,7 +38,7 @@
 						<div class="row">
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="/Port_IllVector.html"><img class="image fit thumb" src="images/thumbs/Thumb_Comms.jpg" alt="" />
+								<a href="/Port_IllPersonal.html"><img class="image fit thumb" src="images/thumbs/Thumb_Comms.jpg" alt="" />
 								<h2>Inked Illustrations</h2></a>
 								<p>A collection of illustrations made using an ink brush.</p>
 							</article>
