--- a/Port_IllVector.html
+++ b/Port_IllVector.html
@@ -35,9 +35,9 @@
 				<!-- Two -->
 					<section id="two">
 						<h2>Vector Work</h2>
-                        <p>Work created using adobe illustrator. Endlessly scalable and all that!/p>
+                        <p>Work created using adobe illustrator. Endlessly scalable and all that!</p>
 						<div class="row">
-							<article class="col-21 col-30 work-item">
+							<article class="col-21 col-12-xsmall work-item">
 								<a href="images/illustration/Portfolio_Dagoth.jpg" class="image fit"><img src="images/illustration/Portfolio_Dagoth.jpg" alt="" /></a>
 							</article>
                             <article class="col-21 col-12-xsmall work-item">
