Fixed images to be .pngs

--- a/SECRET_CTPFiles.html
+++ b/SECRET_CTPFiles.html
@@ -39,10 +39,13 @@
 						<div class="row">
 							<article class="col-21 col-12-xsmall work-item">
 								<a href="images/CTP/Hollis _ By Damien.jpg" class="image fit"><img src="images/CTP/Hollis _ By Damien.jpg" alt="" /></a>
-                                <a href="images/CTP/kang_byprovie.jpg" class="image fit"><img src="images/CTP/kang_byprovie.jpg" alt="" /></a>
-                                <a href="images/CTP/lamby_byprovie.jpg" class="image fit"><img src="images/CTP/lamby_byprovie.jpg" alt="" /></a>
-                                <a href="images/CTP/lily_By Provie.jpg" class="image fit"><img src="images/CTP/lily_By Provie.jpg" alt="" /></a>
-                                <a href="images/CTP/moth_byprovie.jpg" class="image fit"><img src="images/CTP/moth_byprovie.jpg" alt="" /></a>
+                                <br>
+                                <a href="images/CTP/kang_byprovie.png" class="image fit"><img src="images/CTP/kang_byprovie.png" alt="" /></a>
+                                <br>
+                                <a href="images/CTP/lamby_byprovie.png" class="image fit"><img src="images/CTP/lamby_byprovie.png" alt="" /></a>
+                                <a href="images/CTP/lily_By Provie.png" class="image fit"><img src="images/CTP/lily_By Provie.png" alt="" /></a>
+                                <a href="images/CTP/moth_byprovie.png" class="image fit"><img src="images/CTP/moth_byprovie.png" alt="" /></a>
+                                Hi Test
                                 <h2>Concept</h2>
                                 <a href="images/characters/Cael4.jpg" class="image fit"><img src="images/characters/Cael4.jpg" alt="" /></a>
 							</article>
