added silly note

--- a/SECRET_CTPFiles.html
+++ b/SECRET_CTPFiles.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Cael - TGI Studios</title>
+		<title>Shhh... Secret CTP Files!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,8 +34,8 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Cael</h2>
-                        <p>Character rigged and modeled for my senior thesis project, <a href="Port_Micheart.html">Micheart</a>.</p>
+						<h2>Secret Files for the CTP 2025</h2>
+                        <p>Using my website to store files for my secret christmas tree project... IF you found this page, then... I'LL GET YOU!</p>
 						<div class="row">
 							<article class="col-21 col-12-xsmall work-item">
 								<a href="images/CTP/Hollis _ By Damien.jpg" class="image fit"><img src="images/CTP/Hollis _ By Damien.jpg" alt="" /></a>
