--- a/SECRET_CTPFiles.html
+++ b/SECRET_CTPFiles.html
@@ -45,6 +45,15 @@
                                 <a href="images/CTP/lamby_byprovie.png" class="image fit"><img src="images/CTP/lamby_byprovie.png" alt="" /></a>
                                 <a href="images/CTP/lily_By Provie.png" class="image fit"><img src="images/CTP/lily_By Provie.png" alt="" /></a>
                                 <a href="images/CTP/moth_byprovie.png" class="image fit"><img src="images/CTP/moth_byprovie.png" alt="" /></a>
+								==========
+								<a href="images/CTP/Damien_Bylamby.png" class="image fit"><img src="images/CTP/Damien_Bylamby.png" alt="" /></a>
+								<a href="images/CTP/Kang_ByLamby.png" class="image fit"><img src="images/CTP/Kang_ByLamby.png" alt="" /></a>
+								<a href="images/CTP/Kougie_ByLamby.png" class="image fit"><img src="images/CTP/Kougie_ByLamby.png" alt="" /></a>
+								<a href="images/CTP/Lamby_ByTal.png" class="image fit"><img src="images/CTP/Lamby_ByTal.png" alt="" /></a>
+								<a href="images/CTP/Moth_byLamby.png" class="image fit"><img src="images/CTP/Moth_byLamby.png" alt="" /></a>
+								<a href="images/CTP/Provie_ByLamby.png" class="image fit"><img src="images/CTP/Provie_ByLamby.png" alt="" /></a>
+								<a href="images/CTP/Provie_ByTal.png" class="image fit"><img src="images/CTP/Provie_ByTal.png" alt="" /></a>
+								<a href="images/CTP/Tal_ByLamby.png" class="image fit"><img src="images/CTP/Tal_ByLamby.png" alt="" /></a>
                                 Hi Test
                                 <h2>Concept</h2>
                                 <a href="images/characters/Cael4.jpg" class="image fit"><img src="images/characters/Cael4.jpg" alt="" /></a>
